data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1771.wast
;; 2. **Test Case 2**: Implement `br_if` where the conditionally branched label targets a block with expected output types mismatched with the current operand stack.    - **Constraint Checked**: Validation of operand stack unwinding and type alignment with target block’s expected output.    - **CFG Relation**: CFG inconsistencies due to incorrect type stack validation, leading to execution errors or invalid state transitions.

(assert_invalid
  (module
    (func $type-mismatch-output (result i32)
      (block (result f32) ;; block expects a f32 result
        (i32.const 42) ;; this pushes an i32, but the block expects f32
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)